# devicetree-tool

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  build_test.yml  dco.yml  integration_test.yml  unit_test.yml
docs/: design.md  functionality.md
src/: attribute.rs  devicetree.rs  dtb.rs  dtb_generator.rs  dtb_parser.rs  dts.rs  dts_generator.rs  dts_parser.rs  element.rs  lib.rs  main.rs  node.rs  property.rs  reservation.rs  tree.rs  utils.rs
test/: dtb_0.dtb  dtb_4.dtb  dts_0.dts  dts_1.dts  dts_3.dts  dts_4.dts  dts_5.dts  dts_6.dts  dts_7.dts  dts_ori.dts  integration.sh  integration_02.dts  integration_03.dts
