[package]
name = "devicetree-tool"
description = "A device tree building and parsing tool written in Rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Michael Zhao <michael2012zhao@hotmail.com>"]
repository = "https://github.com/michael2012z/devicetree-tool"
keywords = ["fdt", "devicetree", "dts", "dtb", "dt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.10"

[[bin]]
name = "devicetree-tool"
path = "src/main.rs"
